--- a/styles/style.css
+++ b/styles/style.css
@@ -3,10 +3,26 @@ html {
   scroll-behavior: smooth;
 }
 
+#bigTitle {
+  text-align: center;
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.tabcontent-container {
+  text-align: center;
+  margin: 20px 100px 100px;
+  border-radius: 10px;
+  background-color: #fff; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
 /* Style the tab */
 .tab {
   overflow: hidden;
-  border: 1px solid #000000;
+  border: 2px solid #72a057;
   background-color: #63b47e;
   border-radius: 5px;
   margin: 20px 100px 100px;
@@ -27,11 +43,14 @@ html {
 /* Change background color of buttons on hover */
 .tab button:hover {
   background-color: #8abd9b;
+  border-radius: 5px;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
   background-color: #80b993;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* Style the tab content */
@@ -46,12 +65,18 @@ html {
 
 .tabcontent button {
   border-radius: 5px;
+  font-family: 'Poppins', sans-serif;
+  outline: none;
 }
 
 .tabcontent button:hover {
-  background-color: #a1ceb0ab;
+  background-color: #66ce85ab;
 }
 
+#dietSelect{
+  border-radius: 5px;
+  font-family: 'Poppins', sans-serif;
+}
 
 #cartImage {
   position: fixed;
