--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@ html {
   text-align: center;
   margin: 20px 350px 100px 350px;
   border-radius: 10px;
-  background-color: #ffffff93; 
+  background-color: #f5f5f5de; 
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -168,7 +168,7 @@ html {
   margin-top: 20px;
   font-family: 'Poppins', sans-serif;
   position: fixed;
-  font-size: 14px;
+  font-size: 18px;
 
 }
 
@@ -204,8 +204,13 @@ html {
   color: rgb(24, 24, 24);
 }
 
+.dark-mode #priceRangeContainer {
+  background-color: #cccccc;
+  color: rgb(24, 24, 24);
+}
+
 .dark-mode .cart-menu {
-  background-color: #8f8f8f;
+  background-color: #cccccc;
   color: rgb(24, 24, 24);
 }
 
@@ -229,7 +234,7 @@ html {
   padding: 14px 16px;
   transition: 0.3s;
   font-family: 'Poppins', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 /* Change background color of buttons on hover */
@@ -253,6 +258,7 @@ html {
   border: 1px solid #ccc;
   border-top: none;
   font-family: 'Poppins', sans-serif;
+  color: #000000;
 
 }
 
@@ -358,4 +364,34 @@ header {
     position: fixed;
     z-index: 9999;
 
+}
+
+.dark-mode #priceRangeContainer {
+  color: rgb(0, 0, 0);
+}
+
+.slider-menu {
+  position: fixed;
+  left: 20px;
+  top: 625px; 
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 250px;
+}
+
+#priceRangeContainer {
+  background-color: #fff;
+  position: fixed;
+  
+}
+
+#priceRangeLabel {
+  font-size: 16px;
+  margin-left: 100px;
+}
+
+#priceRange {
+  width: 50%;
 }
